# TrustPalestine

./: AllInOneITConfigTool.ps1  AllInOneITConfigTool.spec  CLAUDE.md  README.md  cli.py  debug_winget_download.py  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
allinone_it_config/: __init__.py  app_registry.py  constants.py  office_templates.py  paths.py  user_settings.py
downloads_probe/chrome/google_chrome/: installer.partial
downloads_probe/crowdstrike_falcon_sensor/: crowdstrike_falcon_sensor.exe.partial
downloads_probe/firefox/mozilla_firefox/: installer.partial
downloads_probe/hp_support_asst/: sp168523.exe.partial
downloads_probe/intel_dsa/intel_inteldriverandsupportassistant/: installer.partial
downloads_probe/java_8_0_3410_10/oracle_javaruntimeenvironment/: installer.partial
downloads_probe/k-lite_mega/codecguide_k-litecodecpack_mega/: installer.partial
downloads_probe/naps2/cyanfish_naps2/: installer.partial
downloads_probe/office_2024_ltsc/microsoft_officedeploymenttool/: installer.partial
downloads_probe/vc___2005/microsoft_vcredist_2005_x64/: installer.partial
downloads_probe/vc___2005/microsoft_vcredist_2005_x86/: installer.partial
scripts/: test_downloads.py  test_office_2024_partial_download.ps1
services/: app_status.py  drivers.py  installer.py  privilege.py  system_config.py
tests/: test_constants.py  test_installer_service.py  test_system_config.py
ui/: drivers_tab.py  install_tab.py  main_window.py  settings_dialog.py  system_tab.py  workers.py
(+14 files in other folders)
