[project]
name = "all-in-one-it-config-tool"
version = "0.1.0"
description = "Python port of the All-In-One IT Configuration Tool"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "pywin32>=306; platform_system == 'Windows'",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
